--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
-body {
+/* RESET CSS */
+body,
+html,
+ul,
+li {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: black;
+}
+
+.App {
+  margin: 0 auto;
+  width: 80%;
 }
 
 .is-checked {
