fix UI, fix keypress, add FA

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,19 @@ li {
   padding: 0;
 }
 
+input,
+button {
+  outline: none;
+}
+
+body,
+html {
+  height: 100%
+}
+
 body {
-  background-color: black;
+  background-color: #eee;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .App {
@@ -16,6 +27,35 @@ body {
   width: 80%;
 }
 
+#header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.status {
+  text-transform: uppercase;
+  color: #777;
+  letter-spacing: 2px;
+}
+
 .is-checked {
   text-decoration: line-through;
+}
+
+.list li {
+  list-style: none;
+}
+
+.todo-input {
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  line-height: 32px;
+}
+
+.add-new-btn {
+  background: none;
+  border: none;
+  font-weight: 600;
 }
