--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,12 @@ body {
   border: none;
   font-weight: 600;
 }
+
+.list>li {
+  background-color: #fff;
+  display: flex;
+  margin-top: 10px;
+  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+}
