checkbox complete todo, grid ui view

--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,13 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+
+.list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(16em, 1fr));
+  grid-gap: 10px;
+}
+
+.not-found {
+  grid-column: 1 / -1;
+}
